phonegap build, various fixes

--- a/styles/scss/style.scss
+++ b/styles/scss/style.scss
@@ -171,6 +171,8 @@ body {
     min-width: 100%;
     background-color: #fff;
     z-index: 2;
+    -webkit-transform: translateX(0);
+    transform: translateX(0);
     -webkit-transition: -webkit-transform 0.2s;
     transition: transform 0.2s;
     &.open {
